Added 10 more films, now site rating work together whit kinopoisk rating

--- a/about.html
+++ b/about.html
@@ -61,31 +61,33 @@
 	</header><!-- .header-->
 
 	<main class="content">
-		<div class="titleAbout">
-			О проекте		
-		</div>
-		<div class="textAbout">
-			Film-helper - это веб-сервис по индивидуальному подбору фильмов. Наш сайт создан для тех кому сложно подобрать фильм, пройдя не большой тест наша система поможет вам подобрать фильм для просмотра.
-			<br>
-			<br>
-			Основными преимуществами нашего сайта являются:
-			<div class="listadventage">
-				<ul class="list3a">
-				 <li>Специальная интелектуальная система разработнная специально что бы подобрать вам фильм.</li>
-				 <li>Быстрый тест,который не займет у вас дольше 5 минут.</li>
-				 <li>Возможность быстрой переработки списка фильмов для вас одним лишь нажатием на кнопку "Dislike".</li>
-				</ul>
+		<div class="otherPages">
+			<div class="titleAbout">
+				О проекте		
 			</div>
-			<br>
-			<br>
-			Сайт является дипломным проектом, и в дальнейшем будет улучшаться и прогрессировать.
+			<div class="textAbout">
+				Film-helper - это веб-сервис по индивидуальному подбору фильмов. Наш сайт создан для тех кому сложно подобрать фильм, пройдя не большой тест наша система поможет вам подобрать фильм для просмотра.
+				<br>
+				<br>
+				Основными преимуществами нашего сайта являются:
+				<div class="listadventage">
+					<ul class="list3a">
+					 <li>Специальная интелектуальная система разработнная специально что бы подобрать вам фильм.</li>
+					 <li>Быстрый тест,который не займет у вас дольше 5 минут.</li>
+					 <li>Возможность быстрой переработки списка фильмов для вас одним лишь нажатием на кнопку "Dislike".</li>
+					</ul>
+				</div>
+				<br>
+				<br>
+				Сайт является дипломным проектом, и в дальнейшем будет улучшаться и прогрессировать.
+			</div>
 		</div>
 	</main><!-- .content -->
 
 </div><!-- .wrapper -->
 
 <footer class="footer">
-	<strong>Test</strong> this is footer
+	<strong>Copyright © 2018-2019. All Rights Reserved. Admin: lexur-02@yandex.ru</strong>
 </footer><!-- .footer -->
 
 </body>
