--- a/sliders.html
+++ b/sliders.html
@@ -106,7 +106,7 @@
 </div><!-- .wrapper -->
 
 <footer class="footer">
-	<strong>Test</strong> this is footer
+	<strong>Copyright © 2018-2019. All Rights Reserved. Admin: lexur-02@yandex.ru</strong>
 </footer><!-- .footer -->
 
 </body>
