--- a/years.html
+++ b/years.html
@@ -30,6 +30,14 @@
     $( "#amount" ).val($( "#slider-range" ).slider( "values", 0 ) +" - " + $( "#slider-range" ).slider( "values", 1 ) );
   } );
   </script>
+    <!--Подключение Favicon-->
+    <link rel="apple-touch-icon" sizes="76x76" href="sources/img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="sources/img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="sources/img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="sources/img/favicon/site.webmanifest">
+  <link rel="mask-icon" href="sources/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">  
 </head>
 <body ng-controller="firstCtrl">
   <header class="header">
@@ -74,7 +82,7 @@
 </div><!-- .wrapper -->
 
 <footer class="footer">
-  <strong>Test</strong> this is footer
+  <strong>Copyright © 2018-2019. All Rights Reserved. Admin: lexur-02@yandex.ru</strong>
 </footer><!-- .footer -->
 </body>
 </html>
