--- a/resultFilm.html
+++ b/resultFilm.html
@@ -16,6 +16,14 @@
   <script src="sources/js/films_info.js"></script>
   <script src="sources/js/films.js"></script>  
   <script src="sources/js/main.js"></script>
+  <!--Подключение Favicon-->
+  <link rel="apple-touch-icon" sizes="76x76" href="sources/img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="sources/img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="sources/img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="sources/img/favicon/site.webmanifest">
+  <link rel="mask-icon" href="sources/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">    
 </head>
 <body ng-controller="firstCtrl">
   <header class="header">
@@ -41,10 +49,14 @@
   </header><!-- .header-->
 <main class="content">
     <div class="test">
-      <h1>{{currentFilm.title}}</h1>
-      <h2>{{currentFilm.year}}</h2>
-      <h3>{{currentFilm.rating}}</h3>
-      <h4>{{currentFilm.info}}</h4>
+      <div class="showResultFilm">
+        <div class="filmTitle">{{currentFilm.title}}</div>
+        <div class="otherInfo">
+          <h2>Год производства:{{currentFilm.year}}</h2>
+          <h3>Рейтинг фильма:{{currentFilm.rating}}</h3>
+          <h4>{{currentFilm.info}}</h4>
+        </div>
+      </div>
       <button class="startTest" ng-click="showFilm()">Показать фильм!</button>
       <button class="disFilm" ng-click="disFilm()">Дизлайк</button>
       <button class="showNext" ng-click="showNext()">Next</button>
@@ -54,7 +66,7 @@
 </div><!-- .wrapper -->
 
 <footer class="footer">
-  <strong>Test</strong> this is footer
+  <strong>Copyright © 2018-2019. All Rights Reserved. Admin: lexur-02@yandex.ru</strong>
 </footer><!-- .footer -->
 </body>
 </html>
