--- a/pickFavoriteActors.html
+++ b/pickFavoriteActors.html
@@ -32,19 +32,25 @@
         <img src="sources/img/logo.png" id="logo">
       </div>
       <nav class="menu">
-        <ul>
-          
-          <a href="index.html" class="selected"><li>
-              Главная
-          </li></a>
-          <a href="top_years.html"><li>
-              Лучшие фильмы года
-          </li></a>
-          <a href="about.html"><li>
-              О проекте
-          </li></a>
-        </ul>
-      </nav>
+            <ul>
+              
+              <a href="index.html" class="selected"><li>
+                  Главная
+              </li></a>
+              <a href="sendfilm.html" ><li>
+                  Bounty
+              </li></a>
+              <a href="calendar.html"><li>
+                  Премьеры
+              </li></a>
+              <a href="top_years.html"><li>
+                  Лучшие фильмы года
+              </li></a>
+              <a href="about.html"><li>
+                  О проекте
+              </li></a>
+            </ul>
+        </nav>
     </div>
   </header><!-- .header-->
 <main class="content">
