--- a/top_years.html
+++ b/top_years.html
@@ -43,24 +43,25 @@
 				<img src="sources/img/logo.png" id="logo">
 			</div>
 			<nav class="menu">
-				<ul>
-					<li>
-						<a href="index.html">
-							Главная
-						<a>
-					</li>
-					<li>
-						<a href="top_years.html" class="selected">
-							Лучшие фильмы года
-						<a>
-					</li>
-					<li>
-						<a href="about.html">
-							О проекте
-						<a>
-					</li>
-				</ul>
-			</nav>
+            <ul>
+              
+              <a href="index.html"><li>
+                  Главная
+              </li></a>
+              <a href="sendfilm.html" ><li>
+                  Bounty
+              </li></a>
+              <a href="calendar.html"><li>
+                  Премьеры
+              </li></a>
+              <a href="top_years.html" class="selected"><li>
+                  Лучшие фильмы года
+              </li></a>
+              <a href="about.html"><li>
+                  О проекте
+              </li></a>
+            </ul>
+        </nav>
 		</div>
 	</header><!-- .header-->
 
